# MaziSpace

./: .gitignore  README.md  pyproject.toml
app/: game.py  main.py
fastapi/: __init__.py  responses.py  staticfiles.py  templating.py  testclient.py
fastapi/middleware/: __init__.py  cors.py
static/: game.js  styles.css
templates/: index.html
tests/: conftest.py  test_api.py  test_leaderboard.py
