[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazispace"
version = "0.1.0"
description = "FastAPI 기반 모던 웹 아케이드 게임"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "MaziSpace Team" },
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

